--- a/package/victoria-metrics.service
+++ b/package/victoria-metrics.service
@@ -1,5 +1,6 @@
 [Unit]
-Description=High-performance, cost-effective and scalable time series database, long-term remote storage for Prometheus
+Description=VictoriaMetrics is a fast, cost-effective and scalable monitoring solution and time series database.
+# https://docs.victoriametrics.com
 After=network.target
 
 [Service]
@@ -7,11 +8,11 @@ Type=simple
 StartLimitBurst=5
 StartLimitInterval=0
 Restart=on-failure
-RestartSec=1
-ExecStart=/usr/bin/victoria-metrics-prod -storageDataPath=/var/lib/victoria-metrics-data
+RestartSec=2
+ExecStart=/usr/bin/victoria-metrics-prod -storageDataPath=/var/lib/victoria-metrics-data -retentionPeriod=12 -httpListenAddr=:8428 -graphiteListenAddr=:2003 -opentsdbListenAddr=:4242 -influxListenAddr=:8089 -enableTCP6
 ExecStop=/bin/kill -s SIGTERM $MAINPID
-LimitNOFILE=65536
-LimitNPROC=32000
-
+ExecReload=/bin/kill -HUP $MAINPID
+LimitNOFILE=1048576
+LimitNPROC=1048576
 [Install]
-WantedBy=multi-user.target
+WantedBy=multi-user.targets
