--- a/package/victoria-metrics.service
+++ b/package/victoria-metrics.service
@@ -8,11 +8,24 @@ Type=simple
 StartLimitBurst=5
 StartLimitInterval=0
 Restart=on-failure
-RestartSec=2
+RestartSec=5
 ExecStart=/usr/bin/victoria-metrics-prod -storageDataPath=/var/lib/victoria-metrics-data -retentionPeriod=12 -httpListenAddr=:8428 -graphiteListenAddr=:2003 -opentsdbListenAddr=:4242 -influxListenAddr=:8089 -enableTCP6
 ExecStop=/bin/kill -s SIGTERM $MAINPID
 ExecReload=/bin/kill -HUP $MAINPID
+ProtectSystem=full
 LimitNOFILE=1048576
 LimitNPROC=1048576
+LimitCORE=infinity
+StandardOutput=syslog
+StandardError=syslog
+SyslogIdentifier=victoria-metrics
+PrivateTmp=yes
+ProtectHome=yes
+NoNewPrivileges=yes
+ProtectSystem=strict
+ProtectControlGroups=true
+ProtectKernelModules=true
+ProtectKernelTunables=yes
+
 [Install]
 WantedBy=multi-user.targets
